<resources>
    <string name="app_name">Recorde-me Remédio</string>
    <string name="remedio_lembrar">Lembre-me!</string>
    <string name="restam">Restam:</string>
    <string name="iniciou">Hora Inicial:</string>
    <string name="termina">Início-Término:</string>
    <string name="remedio">Remédio</string>
    <string name="clock">Relógio</string>
    <string name="valor">default</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>

    <string name="customizar_reticencias">Customizar…</string>
    <string name="customizar">Customizar</string>
    <string name="quatro_horas">4 horas</string>
    <string name="seis_horas">6 horas</string>
    <string name="oito_horas">8 horas</string>
    <string name="doze_horas">12 horas</string>
    <string name="vintequatro_horas">24 horas</string>

    <string name="cinco_dias">5 dias</string>
    <string name="sete_dias">7 dias</string>
    <string name="uma_semana">1 semana</string>
    <string name="catorze_dias">14 dias</string>
    <string name="duas_semanas">2 semanas</string>
    <string name="todos_dias">Todos os dias</string>

    <string name="nota">Nota</string>
    <string name="hora">Hora</string>
    <string name="data">Período</string>
    <string name="hora_inicial">Iniciar em</string>

<!--    Overhaul strings-->
    <string name="lembrar">Lembrar</string>
    <string name="novo_remedio">Novo Remedio</string>
    <string name="novo_item">Novo Item</string>
    <string name="adicionar">Adicionar</string>
    <string name="alterar">Alterar</string>
    <string name="retornar">Retornar</string>
    <string name="deletar">Deletar</string>
    <string name="cancelar">Cancelar</string>
    <string name="horario">12:00</string>
    <string name="alterar_remedio">Alterar Remedio</string>
    <string name="deletar_remedio">Deletar Remedio</string>
    <string name="deletar_descricao">Tem certeza que deseja deletar este item?</string>
    <string name="expandir">Expandir</string>

    <string name="seis_em_seis">6 em 6 horas</string>
    <string name="quatro_em_quatro">4 em 4 horas</string>
    <string name="doze_em_doze">12 em 12 horas</string>
    <string name="oito_em_oito">8 em 8 horas</string>
    <string name="vintequatro_em_vintequatro">24 em 24 horas</string>


    <string name="horario_restante">2 horas 34 min</string>
    <string name="data_restante">4 dias</string>

    <string name="termina_em">12/02 – 18/02</string>
    <string name="inicia_todosdias">12/02</string>
    <string name="iniciou_em">16:30</string>

<!--    Menu -->
    <string-array name="menu_main">
        <item>Adicionar Remedio</item>
        <item>Alterar Remedio</item>
        <item>Remover Remedio</item>
    </string-array>

    <string name="descricaoNota">Campo onde é colocado alguma descrição adicional do remedio.</string>
    <string name="descricaoSpinnerData">Campo de escolha das datas que serão selecionadas.</string>
    <string name="descricaoSpinnerHora">Campo de escolha dos horarios que serão selecionados.</string>

    <string name="descricao_hora_inicial">Escolha qual horário o alarme terá seu ínicio.</string>

<!--    Ad Strings-->
    <string name="banner_ad_unit">ca-app-pub-3295333534958164/4908034529</string>
    <string name="banner_google">ca-app-pub-3940256099942544/6300978111</string>

    <string name="nota_um">
        Fique atento à data que foi estabelecida quando foi criado o remedio,
        assim que chegar na data final, o remedio continuará sendo notificado. Sendo assim, é
        necessário remove-lo manualmente.
    </string>
    <string name="nota_dois">
        O alarme notifica quando o dispositivo está ativo ou quando não está no modo Soneca. É
        recomendado durante as noites colocar algum alarme que o faça acordar!
    </string>
    <string name="nota_tres">
        Este app foi criado por um estudante de Dispositivos Móveis, se seu caso é mais grave,
        recomenda-se usar outro app ou despertadores nativos do celular.
    </string>

<!--    Formatações-->
    <string name="data_somada">%s - %s</string>
    <string name="horas">%d em %d hora(s)</string>
    <string name="horas_hint">8 em 8 hora(s)</string>
<!--    %d em %d hora(s)-->
    <string name="dias">%d dia(s)</string>
    <string name="dias_hint">5 dia(s)</string>
<!--    %d dia(s)-->

    <string name="dica_data">Dias</string>
    <string name="dica_horas">Horas</string>

    <string name="remedio_notification_channel_id" translatable="false">remedio_channel</string>

<!--    WorkManager-->
    <string name="ultimo_dia_titulo">Último Dia!</string>
    <string name="ultimo_dia_nota">Verifique dentro do app qual remédio acabará hoje!\n Não se esqueça de removê-lo!</string>

<!--    Alterar Strings-->
    <string name="eram">Anteriormente eram:</string>

<!--    Menu-->
    <string name="alarmNoturno">Alarme Noturno</string>
    <string name="alarmNoturnoDesc">
        Se o alarme for disparar no meio da madrugada, não se esqueça de colocar um despertador!
        O aplicativo apenas notifica e não desperta!
    </string>

<!--    Despertador-->
    <string name="dismiss">Clique na tela para dispensar.</string>
    <string name="titulo_info">Despertador.</string>
    <string name="mensagem_info">
        Se a caixa estiver marcada, o aplicativo irá despertar e para ser
        dispensado precisa "Tocar" na tela. Se estiver desligado, ele apenas irá notificar.
    </string>
    <string name="despertadorText">Tornar padrão o despertador?</string>
    <string name="despertadorContentDesc">Informação sobre o modo despertador.</string>

</resources>