<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="item"
            type="com.malfaa.lembrete.room.entidade.ItemEntidade" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lembrete"
        style="@style/lembrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/remedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/remedio"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/distancia_item_textos"
            style="@style/textView"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/primeiro_box_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                style="@style/textView"
                android:hint="@string/seis_em_seis"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                style="@style/textView"
                android:layout_marginBottom="@dimen/distancia_item"
                android:hint="@string/uma_semana" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textView"
                android:minWidth="206dp"
                android:maxWidth="206dp"
                android:maxLines="2"
                android:hint="@string/nota"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/segundo_box_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/distancia_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/bloco_vertical_interior"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/inicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/distancia_item_textos"
                    android:text="@string/iniciou"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/inicioValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dimen_box_normal_width"
                    android:text="@string/iniciou_em"
                    style="@style/textView"
                    android:textAlignment="center"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/bloco_vertical_interior_dois"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/distancia_item_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/termina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/distancia_item_textos"
                    android:text="@string/termina" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/terminaValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textView"
                    android:textAlignment="center"
                    android:text="@string/termina_em"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>