<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="item"
            type="com.malfaa.recorde_me_remedio.local.Remedio" />
        <variable
            name="clickListener"
            type="com.malfaa.recorde_me_remedio.remedio.main.MainAdapter.RemedioListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/lembrete"
        style="@style/AppShapeAppearance.MediumComponent"
        android:onClick="@{() ->  clickListener.onClick(item)}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_edittext">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/remedio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/distancia_item"
                android:text="@{item.remedio}"
                android:textSize="16sp"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/remedio"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/horario"
                style="@style/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@{@string/horas(item.horaEmHora,item.horaEmHora)}"
                android:textSize="@dimen/font_adicao_small"
                app:layout_constraintStart_toStartOf="@id/remedio"
                app:layout_constraintTop_toBottomOf="@id/remedio"
                tools:text="@string/seis_em_seis"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/data"
                style="@style/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{@string/dias(item.periodoDias)}"
                android:textAlignment="center"
                android:textSize="@dimen/font_adicao_small"
                app:todososdias="@{item.todosOsDias}"
                app:layout_constraintBottom_toBottomOf="@+id/inicioValor"
                app:layout_constraintEnd_toEndOf="@+id/horario"
                app:layout_constraintStart_toStartOf="@+id/horario"
                app:layout_constraintTop_toBottomOf="@+id/horario"
                tools:text="@string/uma_semana"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/distancia_item_textos"
                android:text="@string/iniciou"
                android:textSize="@dimen/font_adicao_small"
                app:layout_constraintStart_toEndOf="@id/horario"
                app:layout_constraintTop_toTopOf="@id/horario" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/inicioValor"
                style="@style/text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/dimen_box_normal_width"
                android:textAlignment="center"
                android:textSize="@dimen/font_adicao_small"
                app:miliParaHoraMinuto="@{item.horaComecoEmMillis}"
                app:layout_constraintBottom_toBottomOf="@+id/terminaValor"
                app:layout_constraintEnd_toEndOf="@+id/inicio"
                app:layout_constraintStart_toStartOf="@id/inicio"
                app:layout_constraintTop_toBottomOf="@id/inicio"
                tools:text = "@string/iniciou_em"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/termina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/distancia_item"
                android:text="@string/termina"
                android:textSize="@dimen/font_adicao_small"
                app:layout_constraintStart_toEndOf="@id/inicio"
                app:layout_constraintTop_toTopOf="@id/inicio" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/terminaValor"
                style="@style/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@{@string/data_somada(item.primeiroDia, item.ultimoDia)}"
                android:textSize="@dimen/font_adicao_small"
                app:layout_constraintEnd_toEndOf="@+id/termina"
                app:layout_constraintStart_toStartOf="@id/termina"
                app:layout_constraintTop_toBottomOf="@id/termina"
                tools:text = "@string/termina_em"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/expand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_expand_more"
                    android:contentDescription="@string/expandir"
                    android:maxWidth="60dp"
                    android:minWidth="50dp"
                    android:minHeight="48dp"
                    android:visibility="visible"
                    app:notaValue="@{item.nota}"
                    app:layout_constraintBottom_toBottomOf="@+id/terminaValor"
                    app:layout_constraintEnd_toEndOf="@+id/remedio"
                    app:layout_constraintStart_toEndOf="@+id/termina"
                    app:layout_constraintTop_toTopOf="@id/termina"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nota_box"
                style="@style/caixa_expandida"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/distancia_nota_item"
                android:layout_marginTop="@dimen/distancia_item"
                android:layout_marginEnd="@dimen/distancia_nota_item"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/data">

                <TextView
                    android:id="@+id/nota"
                    style="@style/nota_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/distancia_item"
                    android:layout_marginEnd="@dimen/distancia_item"
                    android:layout_marginBottom="@dimen/distancia_item"
                    android:text="@{item.nota}"
                    android:textSize="@dimen/font_adicao_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text = "@string/nota"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>